schema/testdata/validation_relationships_many_to_many/schema.keel
model ModelA {
  fields {
    b ModelB[]
  }
}

model ModelB {
  fields {
    a ModelA[]
  }
}